# hbgl-c

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  Makefile  README.md  horizontal_image_gallery.c  image.c  image_8x8.c  main.c  text.c  text_rand.c  vertically_image_gallery.c
include/: hbgl.h
src/: hbgl.c  image.c  shapes.c  truetype.c
